[gd_scene load_steps=24 format=2]

[ext_resource path="res://World/world objects/forest1.tres" type="TileSet" id=1]
[ext_resource path="res://World/world objects/tree5.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Tree2.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/tree3.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/world objects/tree4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/KinematicBody2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/room/chapter2_entrance.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/Script/objectiaRoad.gd" type="Script" id=10]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://intro/pause_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://intro/picture/pause.png" type="Texture" id=14]
[ext_resource path="res://Enemies/plant_bug.tscn" type="PackedScene" id=15]
[ext_resource path="res://NPC/analexuis_chapter3.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/heart_spawn.tscn" type="PackedScene" id=17]
[ext_resource path="res://Enemies/monster_stone.tscn" type="PackedScene" id=18]
[ext_resource path="res://Enemies/small_demon.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/magical chest.tscn" type="PackedScene" id=20]
[ext_resource path="res://World/path_arrow.tscn" type="PackedScene" id=21]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0002
height = 108.0

[sub_resource type="DynamicFont" id=1]
size = 5
font_data = ExtResource( 11 )

[node name="objectiaRoad" type="Node2D"]
script = ExtResource( 10 )

[node name="floor1" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -655366, 20, 0, -655365, 20, 0, -655364, 20, 0, -655363, 20, 0, -655362, 20, 0, -655361, 20, 0, -720896, 20, 0, -720895, 20, 0, -720894, 20, 0, -720893, 20, 0, -720892, 20, 0, -720891, 20, 0, -720890, 20, 0, -720889, 20, 0, -720888, 20, 0, -720887, 20, 0, -720886, 20, 0, -720885, 20, 0, -720884, 20, 0, -720883, 20, 0, -720882, 20, 0, -720881, 20, 0, -720880, 20, 0, -720879, 20, 0, -720878, 20, 0, -720877, 20, 0, -720876, 20, 0, -720875, 20, 0, -720874, 20, 0, -720873, 20, 0, -589830, 20, 0, -589829, 4, 0, -589828, 4, 0, -589827, 4, 0, -589826, 4, 0, -589825, 4, 0, -655360, 4, 0, -655359, 4, 0, -655358, 4, 0, -655357, 4, 0, -655356, 4, 0, -655355, 4, 0, -655354, 4, 0, -655353, 4, 0, -655352, 4, 0, -655351, 4, 0, -655350, 4, 0, -655349, 4, 0, -655348, 4, 0, -655347, 4, 0, -655346, 4, 0, -655345, 4, 0, -655344, 4, 0, -655343, 4, 0, -655342, 4, 0, -655341, 4, 0, -655340, 4, 0, -655339, 4, 0, -655338, 4, 0, -655337, 20, 0, -524294, 20, 0, -524293, 4, 0, -524292, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589824, 4, 0, -589823, 4, 0, -589822, 4, 0, -589821, 4, 0, -589820, 4, 0, -589819, 4, 0, -589818, 4, 0, -589817, 4, 0, -589816, 4, 0, -589815, 4, 0, -589814, 4, 0, -589813, 4, 0, -589812, 4, 0, -589811, 4, 0, -589810, 4, 0, -589809, 4, 0, -589808, 4, 0, -589807, 4, 0, -589806, 4, 0, -589805, 4, 0, -589804, 4, 0, -589803, 4, 0, -589802, 4, 0, -589801, 20, 0, -458758, 20, 0, -458757, 4, 0, -458756, 4, 0, -458755, 4, 0, -458754, 4, 0, -458753, 4, 0, -524288, 4, 0, -524287, 4, 0, -524286, 4, 0, -524285, 4, 0, -524284, 4, 0, -524283, 4, 0, -524282, 4, 0, -524281, 4, 0, -524280, 4, 0, -524279, 4, 0, -524278, 4, 0, -524277, 4, 0, -524276, 4, 0, -524275, 4, 0, -524274, 4, 0, -524273, 4, 0, -524272, 4, 0, -524271, 4, 0, -524270, 4, 0, -524269, 4, 0, -524268, 4, 0, -524267, 4, 0, -524266, 4, 0, -524265, 20, 0, -393222, 20, 0, -393221, 4, 0, -393220, 4, 0, -393219, 4, 0, -393218, 4, 0, -393217, 4, 0, -458752, 4, 0, -458751, 4, 0, -458750, 4, 0, -458749, 4, 0, -458748, 4, 0, -458747, 4, 0, -458746, 4, 0, -458745, 4, 0, -458744, 4, 0, -458743, 4, 0, -458742, 4, 0, -458741, 4, 0, -458740, 4, 0, -458739, 4, 0, -458738, 4, 0, -458737, 4, 0, -458736, 4, 0, -458735, 4, 0, -458734, 4, 0, -458733, 4, 0, -458732, 4, 0, -458731, 4, 0, -458730, 4, 0, -458729, 20, 0, -327686, 20, 0, -327685, 4, 0, -327684, 4, 0, -327683, 4, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 4, 0, -393212, 4, 0, -393211, 4, 0, -393210, 4, 0, -393209, 4, 0, -393208, 4, 0, -393207, 4, 0, -393206, 4, 0, -393205, 4, 0, -393204, 4, 0, -393203, 4, 0, -393202, 4, 0, -393201, 4, 0, -393200, 4, 0, -393199, 4, 0, -393198, 4, 0, -393197, 4, 0, -393196, 4, 0, -393195, 4, 0, -393194, 4, 0, -393193, 20, 0, -262150, 20, 0, -262149, 4, 0, -262148, 4, 0, -262147, 4, 0, -262146, 4, 0, -262145, 4, 0, -327680, 4, 0, -327679, 4, 0, -327678, 4, 0, -327677, 4, 0, -327676, 4, 0, -327675, 4, 0, -327674, 4, 0, -327673, 4, 0, -327672, 4, 0, -327671, 4, 0, -327670, 4, 0, -327669, 4, 0, -327668, 4, 0, -327667, 4, 0, -327666, 4, 0, -327665, 4, 0, -327664, 4, 0, -327663, 4, 0, -327662, 4, 0, -327661, 4, 0, -327660, 4, 0, -327659, 4, 0, -327658, 4, 0, -327657, 20, 0, -196614, 20, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 0, -262142, 4, 0, -262141, 4, 0, -262140, 4, 0, -262139, 4, 0, -262138, 4, 0, -262137, 4, 0, -262136, 4, 0, -262135, 4, 0, -262134, 4, 0, -262133, 4, 0, -262132, 4, 0, -262131, 4, 0, -262130, 4, 0, -262129, 4, 0, -262128, 4, 0, -262127, 4, 0, -262126, 4, 0, -262125, 4, 0, -262124, 4, 0, -262123, 4, 0, -262122, 4, 0, -262121, 20, 0, -131078, 20, 0, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -196596, 4, 0, -196595, 4, 0, -196594, 4, 0, -196593, 4, 0, -196592, 4, 0, -196591, 4, 0, -196590, 4, 0, -196589, 4, 0, -196588, 4, 0, -196587, 4, 0, -196586, 4, 0, -196585, 20, 0, -65542, 20, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -131056, 4, 0, -131055, 4, 0, -131054, 4, 0, -131053, 4, 0, -131052, 4, 0, -131051, 4, 0, -131050, 4, 0, -131049, 20, 0, -6, 20, 0, -5, 4, 0, -4, 4, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 4, 0, -65519, 4, 0, -65518, 4, 0, -65517, 4, 0, -65516, 4, 0, -65515, 4, 0, -65514, 4, 0, -65513, 20, 0, 65530, 20, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 20, 0, 131066, 20, 0, 131067, 4, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 20, 0, 196602, 20, 0, 196603, 4, 0, 196604, 4, 0, 196605, 4, 0, 196606, 4, 0, 196607, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 4, 0, 131094, 4, 0, 131095, 20, 0, 262138, 20, 0, 262139, 4, 0, 262140, 4, 0, 262141, 4, 0, 262142, 4, 0, 262143, 4, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 20, 0, 327674, 20, 0, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 4, 0, 327679, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 20, 0, 393210, 20, 0, 393211, 4, 0, 393212, 4, 0, 393213, 4, 0, 393214, 4, 0, 393215, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 4, 0, 327702, 4, 0, 327703, 20, 0, 458746, 20, 0, 458747, 4, 0, 458748, 4, 0, 458749, 4, 0, 458750, 4, 0, 458751, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 20, 0, 524282, 20, 0, 524283, 4, 0, 524284, 4, 0, 524285, 4, 0, 524286, 4, 0, 524287, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 4, 0, 458774, 4, 0, 458775, 20, 0, 589818, 20, 0, 589819, 4, 0, 589820, 4, 0, 589821, 4, 0, 589822, 4, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 4, 0, 524310, 4, 0, 524311, 20, 0, 655354, 20, 0, 655355, 4, 0, 655356, 4, 0, 655357, 4, 0, 655358, 4, 0, 655359, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 4, 0, 589846, 4, 0, 589847, 20, 0, 720890, 20, 0, 720891, 20, 0, 720892, 20, 0, 720893, 20, 0, 720894, 20, 0, 720895, 20, 0, 655360, 20, 0, 655361, 20, 0, 655362, 20, 0, 655363, 20, 0, 655364, 20, 0, 655365, 20, 0, 655366, 20, 0, 655367, 20, 0, 655368, 20, 0, 655369, 20, 0, 655370, 20, 0, 655371, 20, 0, 655372, 20, 0, 655373, 20, 0, 655374, 20, 0, 655375, 20, 0, 655376, 20, 0, 655377, 20, 0, 655378, 20, 0, 655379, 20, 0, 655380, 20, 0, 655381, 20, 0, 655382, 20, 0, 655383, 20, 0 )

[node name="floor4" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -655348, 4, 1, -655341, 4, 65536, -589814, 12, 65538, -589808, 12, 65538, -589803, 4, 65536, -589802, 4, 1, -524282, 4, 1, -524281, 4, 1, -524280, 4, 65536, -524279, 4, 65536, -524269, 12, 2, -458743, 4, 1, -458740, 4, 65536, -458739, 4, 1, -458738, 4, 65537, -458736, 12, 65538, -393200, 4, 65536, -393199, 4, 65536, -393197, 4, 65536, -327672, 12, 65538, -327671, 12, 2, -262135, 4, 65536, -196598, 4, 1, -196587, 4, 65537, -131066, 12, 65537, -131064, 4, 65537, -131055, 4, 1, -131052, 4, 65536, -65523, 4, 65536, -65514, 12, 65537, 9, 12, 65538, 11, 4, 65536, 12, 4, 65536, 13, 12, 65537, 19, 12, 2, 65542, 12, 2, 65552, 4, 65536, 131079, 4, 65537, 131080, 4, 65536, 131086, 4, 1, 131089, 12, 65537, 131090, 4, 1, 131093, 4, 65536, 131094, 4, 65537, 196613, 12, 65537, 196618, 12, 2, 196623, 12, 65537, 589823, 4, 65537, 655357, 4, 65537, 589826, 12, 65538, 589828, 4, 1, 589831, 12, 2, 589835, 4, 65537, 589838, 12, 65538, 589843, 12, 65538, 589845, 4, 1 )

[node name="cliff1" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -589829, 39, 131072, -589828, 39, 65537, -589827, 39, 65537, -589826, 39, 65537, -589825, 39, 65537, -655360, 39, 65537, -655359, 39, 65537, -655358, 39, 65537, -655357, 39, 65537, -655356, 39, 65539, -524293, 39, 65536, -524292, 39, 65537, -524291, 39, 65537, -524290, 39, 65537, -524289, 39, 65537, -589824, 39, 65537, -589823, 39, 65537, -589822, 39, 65537, -589821, 39, 65537, -589820, 39, 131075, -458757, 39, 131072, -458756, 39, 65537, -458755, 39, 65537, -458754, 39, 65537, -458753, 39, 65537, -524288, 39, 65537, -524287, 39, 65537, -524286, 39, 65537, -524285, 39, 65537, -524284, 39, 65539, -393221, 39, 65536, -393220, 39, 65537, -393219, 39, 65537, -393218, 39, 65537, -393217, 39, 65537, -458752, 39, 65537, -458751, 39, 65537, -458750, 39, 65537, -458749, 39, 65537, -458748, 39, 131075, -327685, 39, 131072, -327684, 39, 65537, -327683, 39, 65537, -327682, 39, 65537, -327681, 39, 65537, -393216, 39, 65537, -393215, 39, 65537, -393214, 39, 65537, -393213, 39, 65537, -393212, 39, 65539, -262149, 39, 65536, -262148, 39, 65537, -262147, 39, 65537, -262146, 39, 65537, -262145, 39, 65537, -327680, 39, 65537, -327679, 39, 65537, -327678, 39, 65537, -327677, 39, 65537, -327676, 39, 131075, -196613, 39, 131072, -196612, 39, 65537, -196611, 39, 65537, -196610, 39, 65537, -196609, 39, 65537, -262144, 39, 65537, -262143, 39, 65537, -262142, 39, 65537, -262141, 39, 65537, -262140, 39, 65539, -131077, 39, 65536, -131076, 39, 65537, -131075, 39, 65537, -131074, 39, 65537, -131073, 39, 65537, -196608, 39, 65537, -196607, 39, 65537, -196606, 39, 65537, -196605, 39, 65537, -196604, 39, 131075, -65541, 39, 131072, -65540, 39, 65537, -65539, 39, 65537, -65538, 39, 65537, -65537, 39, 65537, -131072, 39, 65537, -131071, 39, 65537, -131070, 39, 65537, -131069, 39, 65537, -131068, 39, 65539, -5, 39, 65536, -4, 39, 65537, -3, 39, 65537, -2, 39, 65537, -1, 39, 65537, -65536, 39, 65537, -65535, 39, 65537, -65534, 39, 65537, -65533, 39, 65537, -65532, 39, 131075, 65531, 39, 131072, 65532, 39, 65537, 65533, 39, 65537, 65534, 39, 65537, 65535, 39, 65537, 0, 39, 65537, 1, 39, 65537, 2, 39, 65537, 3, 39, 65537, 4, 39, 65539, 131067, 38, 1, 131068, 38, 2, 131069, 38, 3, 131070, 38, 4, 131071, 38, 5, 65536, 38, 6, 65537, 38, 7, 65538, 38, 8, 65539, 38, 9, 65540, 38, 10, 196603, 38, 65537, 196604, 38, 65538, 196605, 38, 65539, 196606, 38, 196613, 196607, 39, 65537, 131072, 39, 65537, 131073, 38, 65543, 131074, 38, 65544, 131075, 38, 65545, 131076, 38, 65546, 262138, 38, 131072, 262139, 38, 131073, 262140, 38, 131074, 262141, 38, 262150, 262142, 38, 196613, 262143, 38, 131077, 196608, 38, 131078, 196609, 38, 131079, 196610, 38, 131080, 196611, 38, 131081, 196612, 38, 131082, 327675, 38, 196609, 327676, 38, 262149, 327677, 38, 327687, 327678, 38, 196613, 327679, 38, 196613, 262144, 38, 196614, 262145, 38, 196615, 262146, 38, 196616, 262147, 38, 196617, 262148, 38, 196618, 393211, 38, 65537, 393212, 38, 327685, 393213, 38, 262148, 393214, 38, 262149, 393215, 38, 262149, 327680, 38, 262150, 327681, 38, 262151, 327682, 38, 262152, 327683, 38, 262153, 327684, 38, 262154, 327685, 38, 262155, 458747, 38, 196609, 458748, 38, 327683, 458749, 38, 327683, 458750, 38, 327685, 458751, 38, 327685, 393216, 38, 327686, 393217, 38, 327687, 393218, 38, 327688, 393219, 38, 327689, 393220, 38, 327690, 393221, 38, 327691, 524283, 38, 393218, 524284, 38, 393218, 524285, 38, 393219, 524286, 38, 393220, 524287, 38, 393221, 458752, 38, 393222, 458753, 38, 393223, 458754, 38, 393224, 458755, 38, 393225, 458756, 38, 393226, 458757, 38, 393227 )

[node name="floor2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -589826, 1, 65538, -589825, 1, 65536, -655360, 1, 65538, -655359, 1, 65536, -524290, 1, 65538, -524289, 1, 65536, -589824, 1, 65538, -589823, 1, 65536, -589821, 7, 1, -458755, 7, 1, -458754, 1, 65538, -458753, 1, 65536, -524288, 1, 65538, -524287, 1, 65536, -393218, 1, 65538, -393217, 1, 65536, -458752, 1, 65538, -458751, 1, 65536, -327682, 1, 65538, -327681, 1, 65536, -393216, 1, 65538, -393215, 1, 65536, -262146, 1, 65538, -262145, 1, 65536, -327680, 1, 65538, -327679, 1, 65536, -196612, 7, 1, -196610, 1, 65538, -196609, 1, 65536, -262144, 1, 65538, -262143, 1, 65536, -131074, 1, 65538, -131073, 1, 65536, -196608, 1, 65538, -196607, 1, 65536, -65538, 1, 65538, -65537, 1, 65536, -131072, 1, 65538, -131071, 1, 65536, -2, 1, 65538, -1, 1, 131072, -65536, 1, 131074, -65535, 1, 65536, -65533, 7, 1, 65534, 1, 65539, 65535, 1, 1, 0, 1, 1, 1, 1, 65540, 327685, 13, 1, 327686, 13, 65537, 327687, 13, 65537, 327688, 13, 65537, 327689, 13, 65537, 327690, 13, 65537, 327691, 13, 65537, 327692, 13, 65537, 327693, 13, 65537, 327694, 13, 65537, 327695, 13, 65537, 327696, 13, 65537, 327697, 13, 65537, 327698, 13, 65537, 327699, 13, 65537, 327700, 13, 65537, 327701, 13, 65537, 327702, 13, 65537, 393221, 13, 65537, 393222, 13, 65537, 393223, 13, 65537, 393224, 13, 65537, 393225, 13, 65537, 393226, 13, 65537, 393227, 13, 65537, 393228, 13, 65537, 393229, 13, 65537, 393230, 13, 65537, 393231, 13, 65537, 393232, 13, 65537, 393233, 13, 65537, 393234, 13, 65537, 393235, 13, 65537, 393236, 13, 65537, 393237, 13, 65537, 393238, 13, 65537, 458757, 13, 131073, 458758, 13, 65537, 458759, 13, 65537, 458760, 13, 65537, 458761, 13, 65537, 458762, 13, 65537, 458763, 13, 65537, 458764, 13, 65537, 458765, 13, 65537, 458766, 13, 65537, 458767, 13, 65537, 458768, 13, 65537, 458769, 13, 65537, 458770, 13, 65537, 458771, 13, 65537, 458772, 13, 65537, 458773, 13, 65537, 458774, 13, 65537 )

[node name="floor3" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -262123, 12, 65538, -65520, 12, 65538, 131092, 12, 65538, 262149, 11, 3, 262150, 11, 131073, 262151, 11, 131073, 262152, 11, 131073, 262153, 11, 131073, 262154, 11, 131073, 262155, 11, 131073, 262156, 11, 131073, 262157, 11, 131073, 262158, 11, 131073, 262159, 11, 131073, 262160, 11, 131073, 262161, 11, 131073, 262162, 11, 131073, 262163, 11, 131073, 262164, 11, 131073, 262165, 11, 131073, 262166, 11, 131073, 327685, 11, 65539, 327686, 11, 1, 327687, 11, 1, 327688, 11, 1, 327689, 11, 1, 327690, 11, 1, 327691, 11, 1, 327692, 11, 1, 327693, 11, 1, 327694, 11, 1, 327695, 11, 1, 327696, 11, 1, 327697, 11, 1, 327698, 11, 1, 327699, 11, 1, 327700, 11, 1, 327701, 11, 1, 327702, 11, 1, 393232, 12, 65538, 458757, 11, 3, 458758, 11, 131073, 458759, 11, 131073, 458760, 11, 131073, 458761, 11, 131073, 458762, 11, 131073, 458763, 11, 131073, 458764, 11, 131073, 458765, 11, 131073, 458766, 11, 131073, 458767, 11, 131073, 458768, 11, 131073, 458769, 11, 131073, 458770, 11, 131073, 458771, 11, 131073, 458772, 11, 131073, 458773, 11, 131073, 458774, 11, 131073, 524293, 11, 65539, 524294, 11, 1, 524295, 11, 1, 524296, 11, 1, 524297, 11, 1, 524298, 11, 1, 524299, 11, 1, 524300, 11, 1, 524301, 11, 1, 524302, 11, 1, 524303, 11, 1, 524304, 11, 1, 524305, 11, 1, 524306, 11, 1, 524307, 11, 1, 524308, 11, 1, 524309, 11, 1, 524310, 11, 1 )

[node name="uppercliff" type="YSort" parent="."]

[node name="tree8" parent="uppercliff" instance=ExtResource( 6 )]
position = Vector2( 36, -108 )

[node name="tree9" parent="uppercliff" instance=ExtResource( 6 )]
position = Vector2( -37, -38 )

[node name="tree15" parent="uppercliff" instance=ExtResource( 2 )]
position = Vector2( -46, -92 )

[node name="Camera2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 333, 107 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -72, -160 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 368, 160 )

[node name="gandalfHouse_Outside_pos" type="Position2D" parent="."]
position = Vector2( 331, 104 )

[node name="gandalfHouse_Outside" parent="." instance=ExtResource( 9 )]
position = Vector2( 402, 103 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 333, 107 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/player"]
remote_path = NodePath("../../../Camera2D")

[node name="Analexius_chapter3" parent="YSort" instance=ExtResource( 16 )]
position = Vector2( 352, 36 )

[node name="undercliff" type="YSort" parent="YSort"]

[node name="Tree" parent="YSort/undercliff" instance=ExtResource( 3 )]
position = Vector2( -19, -234 )

[node name="Tree11" parent="YSort/undercliff" instance=ExtResource( 3 )]
position = Vector2( 153, -121 )

[node name="Tree2" parent="YSort/undercliff" instance=ExtResource( 4 )]
position = Vector2( 94, -240 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree8" parent="YSort/undercliff" instance=ExtResource( 4 )]
position = Vector2( 183, -76 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree9" parent="YSort/undercliff" instance=ExtResource( 4 )]
position = Vector2( 118, -42 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree10" parent="YSort/undercliff" instance=ExtResource( 4 )]
position = Vector2( 228, -39 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree3" parent="YSort/undercliff" instance=ExtResource( 5 )]
position = Vector2( 241, -266 )

[node name="Tree4" parent="YSort/undercliff" instance=ExtResource( 5 )]
position = Vector2( 101, -129 )

[node name="Tree5" parent="YSort/undercliff" instance=ExtResource( 5 )]
position = Vector2( 219, -172 )

[node name="Tree6" parent="YSort/undercliff" instance=ExtResource( 5 )]
position = Vector2( 281, -82 )

[node name="Tree7" parent="YSort/undercliff" instance=ExtResource( 5 )]
position = Vector2( 341, -142 )

[node name="tree4" parent="YSort/undercliff" instance=ExtResource( 6 )]
position = Vector2( 322, -243 )

[node name="tree5" parent="YSort/undercliff" instance=ExtResource( 6 )]
position = Vector2( 114, 32 )

[node name="tree6" parent="YSort/undercliff" instance=ExtResource( 6 )]
position = Vector2( 288, 26 )

[node name="tree7" parent="YSort/undercliff" instance=ExtResource( 6 )]
position = Vector2( 213, 46 )

[node name="tree13" parent="YSort/undercliff" instance=ExtResource( 2 )]
position = Vector2( 368, -256 )

[node name="tree14" parent="YSort/undercliff" instance=ExtResource( 2 )]
position = Vector2( 329, -16 )

[node name="tree15" parent="YSort/undercliff" instance=ExtResource( 2 )]
position = Vector2( 172, 6 )

[node name="enemies" type="YSort" parent="YSort"]
position = Vector2( 22, 8 )

[node name="plant_bug" parent="YSort/enemies" instance=ExtResource( 15 )]
position = Vector2( -24, -38 )
slime_id = "plantbug1"

[node name="Area2D" type="Area2D" parent="YSort/enemies/plant_bug"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/enemies/plant_bug/Area2D"]
position = Vector2( 0, -10 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="plant_bug2" parent="YSort/enemies" instance=ExtResource( 15 )]
position = Vector2( -26, -117 )
slime_id = "plantbug2"

[node name="Area2D" type="Area2D" parent="YSort/enemies/plant_bug2"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/enemies/plant_bug2/Area2D"]
position = Vector2( 0, -10 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="stone3" parent="YSort/enemies" instance=ExtResource( 18 )]
position = Vector2( 82, 121 )
slime_id = "stone3"

[node name="stone4" parent="YSort/enemies" instance=ExtResource( 18 )]
position = Vector2( 82, 15 )
slime_id = "stone4"

[node name="demon6" parent="YSort/enemies" instance=ExtResource( 19 )]
position = Vector2( -15, 32 )
slime_id = "demon6"

[node name="demon7" parent="YSort/enemies" instance=ExtResource( 19 )]
position = Vector2( 235, -144 )
slime_id = "demon7"

[node name="demon8" parent="YSort/enemies" instance=ExtResource( 19 )]
position = Vector2( 115, -104 )
slime_id = "demon8"

[node name="demon9" parent="YSort/enemies" instance=ExtResource( 19 )]
position = Vector2( 1, 132 )
slime_id = "demon9"

[node name="loot" type="YSort" parent="YSort"]

[node name="puso11" parent="YSort/loot" instance=ExtResource( 17 )]
position = Vector2( 152, -41 )
heart_id = "puso11"

[node name="puso12" parent="YSort/loot" instance=ExtResource( 17 )]
position = Vector2( 232, -100 )
heart_id = "puso12"

[node name="puso13" parent="YSort/loot" instance=ExtResource( 17 )]
position = Vector2( 338, -56 )
heart_id = "puso13"

[node name="puso14" parent="YSort/loot" instance=ExtResource( 17 )]
position = Vector2( 179, -149 )
heart_id = "puso14"

[node name="puso15" parent="YSort/loot" instance=ExtResource( 17 )]
position = Vector2( 300, -146 )
heart_id = "puso15"

[node name="magical_chest" parent="YSort/loot" instance=ExtResource( 20 )]
position = Vector2( -6, 153 )

[node name="TopUi" type="CanvasLayer" parent="."]

[node name="pause_game" type="TextureButton" parent="TopUi"]
margin_left = 292.0
margin_top = 3.0
margin_right = 312.0
margin_bottom = 23.0
texture_normal = ExtResource( 14 )

[node name="HealthUI" parent="TopUi" instance=ExtResource( 12 )]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 14.0

[node name="quest" type="TextureButton" parent="TopUi"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pause_menu" parent="TopUi" instance=ExtResource( 13 )]

[node name="Label2" type="Label" parent="TopUi"]
margin_left = 132.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="objectiaOutside_pos" type="Position2D" parent="."]
position = Vector2( 0, -127 )

[node name="objectiaOutside" parent="." instance=ExtResource( 9 )]
position = Vector2( -9.53674e-07, -155 )
rotation = 1.58677

[node name="path_arrow" parent="." instance=ExtResource( 21 )]
tile_data = PoolIntArray( -10485763, 0, 0 )

[connection signal="body_shape_entered" from="YSort/enemies/plant_bug/Area2D" to="." method="first_bug"]
[connection signal="body_shape_entered" from="YSort/enemies/plant_bug2/Area2D" to="." method="second_bug"]
[connection signal="pressed" from="TopUi/pause_game" to="." method="_on_pause_game_pressed"]

[editable path="Camera2D"]
